fix box spacing error on form-box on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ footer {
     position: relative;
     bottom: 33vw;
     height: 25vw;
-    max-width: 43vw;
+    max-width: 35vw;
     background-color: rgba(107, 107, 184, 0.662);
 }
 
@@ -227,6 +227,7 @@ footer {
 }
 
 .input-form-box {
+    width: 50vw;
     font-size: 3vw;
     border: 1vw;
     margin-top: 3vw;
